# openziti-edge-management-python

./: .gitignore  .gitlab-ci.yml  .travis.yml  README.md  generate_client.sh  pyproject.toml  setup.py  tags
.openapi-generator/: FILES
docs/: APISessionApi.md  ApiError.md  ApiErrorArgs.md  ApiErrorCause.md  ApiErrorEnvelope.md  ApiFieldError.md  ApiSessionDetail.md  ApiSessionPostureData.md  ApiVersion.md  AuthPolicyApi.md  AuthPolicyCreate.md  AuthPolicyDetail.md  AuthPolicyPatch.md  AuthPolicyPrimary.md  AuthPolicyPrimaryCert.md  AuthPolicyPrimaryCertPatch.md  AuthPolicyPrimaryExtJwt.md  AuthPolicyPrimaryExtJwtPatch.md  AuthPolicyPrimaryPatch.md  AuthPolicyPrimaryUpdb.md  AuthPolicyPrimaryUpdbPatch.md  AuthPolicySecondary.md  AuthPolicySecondaryPatch.md  AuthQueryDetail.md  Authenticate.md  AuthenticationApi.md  AuthenticatorApi.md  AuthenticatorCreate.md  AuthenticatorDetail.md  AuthenticatorPatch.md  AuthenticatorPatchWithCurrent.md  AuthenticatorUpdate.md  AuthenticatorUpdateWithCurrent.md  BaseEntity.md  CaCreate.md  CaDetail.md  CaPatch.md  CaUpdate.md  CertificateAuthorityApi.md  CommonEdgeRouterProperties.md  (+241 more)
openziti_edge_management/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
test/: test_api_error.py  test_api_error_args.py  test_api_error_cause.py  test_api_error_envelope.py  test_api_field_error.py  test_api_session_api.py  test_api_session_detail.py  test_api_session_detail_all_of.py  test_api_session_list.py  test_api_session_posture_data.py  test_api_version.py  test_attributes.py  test_auth_policy_api.py  (+357 more)
(+625 files in other folders)
