[tool.poetry]
name = "openziti_edge_management"
version = "0.25.31"
description = "Ziti Edge Management"
authors = ["OpenZiti <help@openziti.org>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/openziti-test-kitchen/openziti-edge-management-python"
keywords = ["OpenAPI", "OpenAPI-Generator", "Ziti Edge Management"]
include = ["openziti_edge_management/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = "^1.10.5, <2"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
